_sass/header.scss
/**
 * Site header
 */
.site-header {
  background-color: #242424;
  min-height: 55.95px;
  position: fixed;
  width: 100%;
  border-bottom: 1px solid #89B6A5;
  z-index: 99;
}

.site-header + * {
  padding-top: 86px;
}

@media (max-width: $small-up) { 
  .site-hero__preview {
    width: auto;
  }

  .site-header + * {
    padding-top: 56px;
  }
}

.nav-links {
  list-style-type: none;
  padding: 0;
}

.nav-links__item {
  display: inline;
  padding-right: 25px;
}

.nav-links__item:last-child {
  padding-right: 0;
}

.site-title {
  display: table-cell;
  vertical-align: middle;
}

.site-title__text {
  display: inline-block;
  text-transform: uppercase;
  color: white;
  font-size: 34px;
}

.site-title__focus {
  color: #2e802e;
}

.site-nav {
  float: right;
  line-height: 54px; 
}

.site-nav .nav-trigger {
  display: none; 
}

.site-nav .menu-icon {
  display: none; 
}

.site-nav .page-link {
  color: #111;
  line-height: 1.5; 
}

.site-nav .page-link:not(:last-child) {
  margin-right: 20px; 
}

@media screen and (max-width: 600px) {
  .site-nav {
    position: absolute;
    top: 9px;
    right: 26px;
    background-color: #fdfdfd;
    border: 1px solid #e8e8e8;
    border-radius: 5px;
    text-align: right; 
  }

  .site-nav label[for="nav-trigger"] {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    z-index: 2;
    cursor: pointer; 
  }

  .site-nav .menu-icon {
    display: block;
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center; 
  }

  .site-nav .menu-icon > svg path {
    fill: #424242; 
  }

  .site-nav input ~ .trigger {
    clear: both;
    display: none; 
  }

  .site-nav input:checked ~ .trigger {
    display: block;
    padding-bottom: 5px; 
  }

  .site-nav .page-link {
    display: block;
    padding: 5px 10px;
    margin-left: 20px; 
  }

  .site-nav .page-link:not(:last-child) {
    margin-right: 0; 
  }

}

